--- a/RepasoLM/src/main/webapp/index.html
+++ b/RepasoLM/src/main/webapp/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
 <form>
+<h1>DNI</h1>
+<br>
+<input type="text" name="dni">
+<br>
 <h1>Nombre:</h1>
 <br>
 <input type="text" name="nombre">
@@ -21,5 +25,7 @@
 <br>
 <button onclick="enviarDatos(this.form)">Enviar</button>
 </form>
+<br>
+<a href="presenta.html"><button>Buscar Datos</button></a>
 </body>
 </html>
