--- a/RepasoLM/src/main/webapp/presenta.html
+++ b/RepasoLM/src/main/webapp/presenta.html
@@ -3,8 +3,16 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
+<script src="script/script.js"></script>
 </head>
 <body>
 <h1>Bienvenido</h1>
+<form>
+<h1>DNI de la persona a buscar datos</h1>
+<br>
+<input type="text" name="dniB">
+<br>
+<button onclick="buscar(this.form)">Buscar</button>
+</form>
 </body>
 </html>
