--- a/RepasoLM/src/main/webapp/index.html
+++ b/RepasoLM/src/main/webapp/index.html
@@ -4,28 +4,47 @@
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
 <script src="script/script.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
+<link rel="stylesheet" href="css/css.css">
 </head>
 <body>
-<form>
-<h1>DNI</h1>
-<br>
-<input type="text" name="dni">
-<br>
-<h1>Nombre:</h1>
-<br>
-<input type="text" name="nombre">
-<br>
-<h1>Apellidos:</h1>
-<br>
-<input type="text" name="apellidos">
-<br>
-<h1>Edad:</h1>
-<br>
-<input type="text" name="edad">
-<br>
-<button onclick="enviarDatos(this.form)">Enviar</button>
-</form>
-<br>
-<a href="presenta.html"><button>Buscar Datos</button></a>
+<div class="container-fluid">
+	<div class="row">
+	<div class="col-md-4">
+	</div>
+		<div class="col-md-4">
+			<form>
+			<h1>DNI</h1>
+			<br>
+			<input type="text" name="dni">
+			<br>
+			<h1>Nombre:</h1>
+			<br>
+			<input type="text" name="nombre">
+			<br>
+			<h1>Apellidos:</h1>
+			<br>
+			<input type="text" name="apellidos">
+			<br>
+			<h1>Edad:</h1>
+			<br>
+			<input type="text" name="edad">
+			<br>
+				<div class="row">
+				<div class="col-md-6">
+					<button><a href="presenta.html">Buscar Datos</a></button>					
+				</div>
+					<div class="col-md-6">
+					<button onclick="enviarDatos(this.form)">Enviar</button>
+					</div>
+				</div>
+			</form>
+		</div>
+		<div class="col-md-4">
+		
+		</div>
+	</div>
+</div>
 </body>
 </html>
