--- a/RepasoLM/src/main/webapp/index.html
+++ b/RepasoLM/src/main/webapp/index.html
@@ -14,29 +14,30 @@
 	<div class="col-md-4">
 	</div>
 		<div class="col-md-4">
+			<h1 ><u class="tituloG">Bienvenido</u></h1>
 			<form>
-			<h1>DNI</h1>
+			<h1><strong class="titulos">DNI</strong></h1>
 			<br>
 			<input type="text" name="dni">
 			<br>
-			<h1>Nombre:</h1>
+			<h1><strong class="titulos">Nombre:</strong></h1>
 			<br>
 			<input type="text" name="nombre">
 			<br>
-			<h1>Apellidos:</h1>
+			<h1><strong class="titulos">Apellidos:</strong></h1>
 			<br>
 			<input type="text" name="apellidos">
 			<br>
-			<h1>Edad:</h1>
+			<h1><strong class="titulos">Edad:</strong></h1>
 			<br>
 			<input type="text" name="edad">
 			<br>
 				<div class="row">
-				<div class="col-md-6">
-					<button><a href="presenta.html">Buscar Datos</a></button>					
+				<div class="col-6">
+					<button class="consulta"><a href="presenta.html">Buscar Datos</a></button>					
 				</div>
-					<div class="col-md-6">
-					<button onclick="enviarDatos(this.form)">Enviar</button>
+					<div class="col-6">
+					<button onclick="enviarDatos(this.form)" class="guardar">Enviar</button>
 					</div>
 				</div>
 			</form>
