--- a/RepasoLM/src/main/webapp/presenta.html
+++ b/RepasoLM/src/main/webapp/presenta.html
@@ -4,15 +4,27 @@
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
 <script src="script/script.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
+<link rel="stylesheet" href="css/css.css">
 </head>
 <body>
-<h1>Bienvenido</h1>
+
+<div class="container-fluid">
+<div class="row">
+<div class="col-md-4"></div>
+<div class="col-md-4">
+<h1 class="tituloG2"><u>Bienvenido</u></h1>
 <form>
-<h1>DNI de la persona a buscar datos</h1>
+<h1 class="titulos">DNI de la persona a buscar datos</h1>
 <br>
 <input type="text" name="dniB">
 <br>
 <button onclick="buscar(this.form)">Buscar</button>
 </form>
+</div>
+<div class="col-md-4"></div>
+</div>
+</div>
 </body>
 </html>
